added module for middleware

--- a/ethdapp/src/app/components/account/account.component.html
+++ b/ethdapp/src/app/components/account/account.component.html
@@ -1,6 +1,6 @@
 <div class="w-100 row m-2">
     <div class="col-3">
-        account-nonce: {{nonce}}
+        <div>account-nonce: {{nonce}}</div>
         <button mat-button color="warn" (click)="loop = !loop; sendTransaction()">Loop?</button>
     </div>
     <div>
