--- a/ethdapp/src/app/components/account/account.component.html
+++ b/ethdapp/src/app/components/account/account.component.html
@@ -8,6 +8,7 @@
             <li>current account nonce: {{nonce}}</li>
             <li>transactions sent: {{txAll}}</li>
             <li>successful transactions: {{txSuccessfull}}</li>
+            <li>failed transactions: {{txFailed}}</li>
         </ul>
     </mat-card-content>
     <mat-card-actions align="end">
