--- a/ethdapp/src/app/components/main/main.component.html
+++ b/ethdapp/src/app/components/main/main.component.html
@@ -4,7 +4,7 @@
         <app-transaction-chart></app-transaction-chart>
     </div>
 
-    <mat-horizontal-stepper class="bg-white mb-4">
+    <mat-horizontal-stepper class="bg-light mb-4">
 
         <mat-step label="Strategy 1: distinct account per user agent">
             <p class="mt-4">
