--- a/angular-ui/src/app/components/approach1/approach1.component.html
+++ b/angular-ui/src/app/components/approach1/approach1.component.html
@@ -1,39 +1,88 @@
 <div class="d-flex flex-column justify-content-center p-5">
 
+    <!-- TX Creation Machine -->
+    <div>
+        <mat-card class="bg-light">
+            <mat-card-title>TX Creation Machine</mat-card-title>
+            <mat-card-content class="d-flex align-items-stretch justify-content-between mt-3">
 
-    <div class="d-flex justify-content-around">
+                <mat-card class="d-flex flex-column flex-fill">
+                    <div>
+                        <mat-form-field>
+                            <mat-label>Base URL</mat-label>
+                            <input #creationUrlInput1 matInput type="text">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3">
+                        <button mat-raised-button color="primary" (click)="setBaseUrlCreationMachine(creationUrlInput1.value)">Set URL</button>
+                    </div>
+                    <div>Base URL: {{creatingMachine.url}}</div>
+                </mat-card>
+
+                <mat-card class="d-flex flex-column flex-fill">
+                    <div>
+                        <mat-form-field>
+                            <mat-label>Eth private key</mat-label>
+                            <input #privateKeyInput matInput type="text">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3">
+                        <button mat-raised-button color="primary" class="me-2" (click)="setAccount(privateKeyInput.value)">Set Account</button>
+                        <button mat-raised-button color="accent" (click)="getCurrentAccount()">Fetch Account</button>
+                    </div>
+                    <div class="text-break">account address: {{creatingMachine.accountAddress}}</div>
+                    <div class="text-break">private key: {{creatingMachine.privateKey}}</div>
+                </mat-card>
+
+                <mat-card class="d-flex flex-column flex-fill">
+                    <div>
+                        <mat-form-field>
+                            <mat-label>Contract address</mat-label>
+                            <input #contractAddressInput matInput type="text">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3">
+                        <button mat-raised-button color="primary" class="me-2" (click)="setContractAddress(contractAddressInput.value)">Set Address</button>
+                        <button mat-raised-button color="accent" (click)="getCurrentContractAddress()">Fetch Address</button>
+                    </div>
+                    <div class="text-break">contract address: {{creatingMachine.contractAddress}}</div>
+                </mat-card>
+
+            </mat-card-content>
+        </mat-card>
+    </div>
+
+    <!-- Number of TX Request Machines -->
+    <div class="d-flex justify-content-around mt-5 mb-4">
         <div class="d-flex align-items-center">
-            <div>Number of TX-Creating Machines: </div>
+            <div>Number of Machines requesting TX Creation: </div>
             <div class="w-25 ps-3">
                 <mat-form-field>
-                    <mat-label>Number of TX-Creating Machines</mat-label>
-                    <input matInput min="0" [(ngModel)]="numberMachines" type="number" (change)="updateMachines()">
+                    <mat-label>Number of requesting machines</mat-label>
+                    <input matInput min="0" [(ngModel)]="numberRequestMachines" type="number" (change)="updateRequestMachines()">
                 </mat-form-field>
             </div>
         </div>
         <div>
             <button class="me-3" mat-raised-button color="primary" (click)="startAllMachines()">Start all Machines</button>
             <button class="me-3" mat-raised-button color="warn" (click)="stopAllMachines()">Stop all Machines</button>
-            <button class="me-5" mat-raised-button color="accent" (click)="fetchAllResults()">Fetch all results</button>
-            <button mat-raised-button color="primary" (click)="downloadResultsAsJsonFile()">Download results</button>
         </div>
     </div>
 
-
     <div class="container-fluid row pe-0 ps-0">
-        <div class="col-3 mb-3" *ngFor="let machine of machines; let i = index">
+        <div class="col-3 mb-3" *ngFor="let machine of requestMachines; let i = index">
             <mat-card class="bg-light">
-                <mat-card-title>Machine {{i+1}}</mat-card-title>
-                <mat-card-content class="d-flex flex-column">
+                <mat-card-title>Requesting Machine {{i+1}}</mat-card-title>
+                <mat-card-content class="d-flex flex-column mt-2">
 
                     <mat-card class="d-flex flex-column mt-3 mb-3" *ngIf="machine.url">
                         <div class="mb-3">
-                            <b>Transaction-Creation is currently <span [ngStyle]="{'color': machine.isRunning ? 'green' : 'red'}">{{machine.isRunning ? 'running' : 'stopped'}}</span></b>
+                            <b>Transaction-Requesting is currently <span [ngStyle]="{'color': machine.isRunning ? 'green' : 'red'}">{{machine.isRunning ? 'running' : 'stopped'}}</span></b>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <button mat-raised-button color="primary" (click)="startTxCreation(machine)">Start</button>
-                            <button mat-raised-button color="warn" (click)="stopTxCreation(machine)">Stop</button>
-                            <button mat-raised-button color="accent" (click)="fetchResults(machine)">Fetch Results</button>
+                            <button mat-raised-button color="primary" (click)="startTxRequesting(machine)">Start</button>
+                            <button mat-raised-button color="warn" (click)="stopTxRequesting(machine)">Stop</button>
+                            <button mat-raised-button color="accent">Fetch Results</button>
                         </div>
                     </mat-card>
 
@@ -41,9 +90,9 @@
                         <div class="mb-3">
                             <mat-form-field class="me-3">
                                 <mat-label>Base URL</mat-label>
-                                <input #urlInput matInput type="text">
+                                <input #requestingUrlInput matInput type="text">
                             </mat-form-field>
-                            <button mat-raised-button color="primary" (click)="setBaseUrl(machine, urlInput.value)">Set URL</button>
+                            <button mat-raised-button color="primary" (click)="setBaseUrlRequestingMachine(machine, requestingUrlInput.value)">Set URL</button>
                         </div>
                         <div>Base URL: {{machine.url}}</div>
                     </mat-card>
@@ -51,32 +100,7 @@
                     <mat-card class="d-flex flex-column mb-3" *ngIf="machine.url">
                         <div class="d-flex flex-wrap justify-content-between mb-3">
                             <mat-form-field class="me-3">
-                                <mat-label>Eth private key</mat-label>
-                                <input #privateKeyInput matInput type="text">
-                            </mat-form-field>
-                            <button mat-raised-button color="primary" (click)="setAccount(machine, privateKeyInput.value)">Set Account</button>
-                            <button mat-raised-button color="accent" (click)="getCurrentAccount(machine)">Fetch Account</button>
-                        </div>
-                        <div class="text-break">account address: {{machine.accountAddress}}</div>
-                        <div class="text-break">private key: {{machine.privateKey}}</div>
-                    </mat-card>
-
-                    <mat-card class="d-flex flex-column mb-3" *ngIf="machine.url">
-                        <div class="d-flex flex-wrap justify-content-between mb-3">
-                            <mat-form-field class="me-3">
-                                <mat-label>Contract address</mat-label>
-                                <input #contractAddressInput matInput type="text">
-                            </mat-form-field>
-                            <button mat-raised-button color="primary" (click)="setContractAddress(machine, contractAddressInput.value)">Set Address</button>
-                            <button mat-raised-button color="accent" (click)="getCurrentContractAddress(machine)">Fetch Address</button>
-                        </div>
-                        <div class="text-break">contract address: {{machine.contractAddress}}</div>
-                    </mat-card>
-
-                    <mat-card class="d-flex flex-column mb-3" *ngIf="machine.url">
-                        <div class="d-flex flex-wrap justify-content-between mb-3">
-                            <mat-form-field class="me-3">
-                                <mat-label>TX-Creation Interval</mat-label>
+                                <mat-label>Request Interval</mat-label>
                                 <input #intervalInput matInput type="number">
                             </mat-form-field>
                             <button mat-raised-button color="primary" (click)="setTxInterval(machine, intervalInput.value)">Set Interval</button>
@@ -84,15 +108,21 @@
                         </div>
                         <div>current interval: {{machine.interval}}</div>
                     </mat-card>
+
+                    <mat-card class="d-flex flex-column mb-3" *ngIf="machine.url">
+                        <div class="d-flex flex-wrap justify-content-between mb-3">
+                            <mat-form-field class="me-3">
+                                <mat-label>TX-Creation Machine URL</mat-label>
+                                <input #creationUrlInput2 matInput type="text">
+                            </mat-form-field>
+                            <button mat-raised-button color="primary" (click)="setTxCreationMachineUrl(machine, creationUrlInput2.value)">Set Interval</button>
+                            <button mat-raised-button color="accent" (click)="getTxCreationMachineUrl(machine)">Fetch Interval</button>
+                        </div>
+                        <div>current url: {{machine.txCreationUrl}}</div>
+                    </mat-card>
+
                 </mat-card-content>
             </mat-card>
         </div>
     </div>
-
-
-    <div class="mt-5">
-        <div><button mat-raised-button color="primary" (click)="updateCharts()">Update Charts</button></div>
-        <app-transaction-chart #xa [yAxesData]="waitingTimeDistributionYAxes" [xAxesData]="waitingTimeDistributionXAxes"></app-transaction-chart>
-    </div>
-
 </div>
