implemented third appraoch

--- a/angular-ui/src/app/app.component.html
+++ b/angular-ui/src/app/app.component.html
@@ -14,7 +14,9 @@
             <mat-tab label="Approach 2: Distinct Account per TX-Creating Machine">
                 <app-approach2 [provider]="provider"></app-approach2>
             </mat-tab>
-            <mat-tab label="Approach 3: Singleton Nonce Manager"></mat-tab>
+            <mat-tab label="Approach 3: Singleton Nonce Manager">
+                <app-approach3></app-approach3>
+            </mat-tab>
             <mat-tab label="Approach 4: Nonce Contingents"></mat-tab>
         </mat-tab-group>
     </div>
