--- a/angular-ui/src/app/components/approach3/approach3.component.html
+++ b/angular-ui/src/app/components/approach3/approach3.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column justify-content-center p-5">
 
 
-    <div class="d-flex justify-content-around">
+    <div class="d-flex justify-content-around mb-4">
         <div class="d-flex align-items-center">
             <div>Number of TX-Creating Machines: </div>
             <div class="w-25 ps-3">
