--- a/angular-ui/src/app/app.component.html
+++ b/angular-ui/src/app/app.component.html
@@ -5,11 +5,12 @@
                 <mat-label>Eth-Node URL</mat-label>
                 <input matInput [(ngModel)]="nodeUrl" type="text">
             </mat-form-field>
-            <button mat-raised-button color="primary" (click)="connectToNode()">Connect</button>
+            <button class="me-3" mat-raised-button color="primary" (click)="connectToNode()">Connect</button>
+            <button *ngIf="provider" mat-raised-button color="primary" (click)="toggleBlockListener()">{{listenForBlocks ? 'Stop Listening for Blocks' : 'Listen for new Blocks'}}</button>
         </div>
         <mat-tab-group mat-align-tabs="center">
             <mat-tab label="Approach 1: Singleton TX-Creating Machine">
-                <app-approach1></app-approach1>
+                <app-approach1 [transactionMap]="transactionMap"></app-approach1>
             </mat-tab>
             <mat-tab label="Approach 2: Distinct Account per TX-Creating Machine">
                 <app-approach2 [provider]="provider"></app-approach2>
