--- a/angular-ui/src/app/components/approach2/approach2.component.html
+++ b/angular-ui/src/app/components/approach2/approach2.component.html
@@ -24,7 +24,9 @@
         <div class="col-3 mb-3" *ngFor="let machine of machines; let i = index">
             <mat-card class="bg-light">
                 <mat-card-title>Machine {{i+1}}</mat-card-title>
-                <mat-card-content class="d-flex flex-column">
+                <mat-card-content class="d-flex flex-column mt-3">
+
+                    <div *ngIf="machine.url">ID: {{machine.machineId}}</div>
 
                     <mat-card class="d-flex flex-column mt-3 mb-3" *ngIf="machine.url">
                         <div class="mb-3">
@@ -73,17 +75,6 @@
                         <div class="text-break">contract address: {{machine.contractAddress}}</div>
                     </mat-card>
 
-                    <mat-card class="d-flex flex-column mb-3" *ngIf="machine.url">
-                        <div class="d-flex flex-wrap justify-content-between mb-3">
-                            <mat-form-field class="me-3">
-                                <mat-label>TX-Creation Interval</mat-label>
-                                <input #intervalInput matInput type="number">
-                            </mat-form-field>
-                            <button mat-raised-button color="primary" (click)="setTxInterval(machine, intervalInput.value)">Set Interval</button>
-                            <button mat-raised-button color="accent" (click)="getCurrentTxInterval(machine)">Fetch Interval</button>
-                        </div>
-                        <div>current interval: {{machine.interval}}</div>
-                    </mat-card>
                 </mat-card-content>
             </mat-card>
         </div>
