angular frontend documentation

--- a/angular-ui/src/app/components/approach1/approach1.component.html
+++ b/angular-ui/src/app/components/approach1/approach1.component.html
@@ -65,7 +65,7 @@
             <div class="w-25 ps-3">
                 <mat-form-field>
                     <mat-label>Number of TX-Creating Machines</mat-label>
-                    <input matInput min="0" [(ngModel)]="numberMachines" type="number" (change)="updateNumberOfMachines()">
+                    <input matInput min="0" [(ngModel)]="numberMachines" type="number" (change)="updateMachines()">
                 </mat-form-field>
             </div>
         </div>
