--- a/angular-ui/src/app/app.component.html
+++ b/angular-ui/src/app/app.component.html
@@ -21,6 +21,9 @@
             <mat-tab label="Approach 4: Nonce Contingents">
                 <app-approach4 [results]="results" [txPoolStatus]="txPoolStatus"></app-approach4>
             </mat-tab>
+			<mat-tab label="Approach 5: Nonce Contingents Derivation">
+                <app-approach5 [results]="results" [txPoolStatus]="txPoolStatus"></app-approach5>
+            </mat-tab>
         </mat-tab-group>
     </div>
 </div>
